--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "webpack boilerplate"
   ],
   "dependencies": {
+    "flatpickr": "^4.6.9",
+    "imask": "^6.0.5",
+    "lg-thumbnail.js": "^1.2.0",
+    "lightgallery.js": "^1.4.0",
+    "slim-select": "^1.26.2",
+    "validate.js": "^0.13.1",
+    "delegated-events": "^1.1.2"
+  },
+  "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
@@ -30,20 +39,14 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
-    "delegated-events": "^1.1.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-webpack-plugin": "^2.4.0",
     "file-loader": "^6.2.0",
-    "flatpickr": "^4.6.9",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "html-webpack-pug-plugin": "^2.0.0",
-    "imask": "^6.0.5",
-    "lg-thumbnail.js": "^1.2.0",
-    "lightgallery.js": "^1.4.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.10",
@@ -55,17 +58,13 @@
     "precss": "^4.0.0",
     "pug-html-loader": "^1.1.5",
     "raw-loader": "^4.0.2",
-    "slim-select": "^1.26.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
-    "validate.js": "^0.13.1",
     "webpack": "^5.8.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0"
-  },
-  "devDependencies": {
+    "webpack-merge": "^5.4.0",
     "css-minimizer-webpack-plugin": "^1.1.5"
   }
 }
